<resources>
    <string name="app_name">ru-pizza-app</string>
    <string name="ru_pizza">RU Pizza</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="build_your_own_pizza" />
    <string name="add_to_order" />
    <string name="subtotal">Subtotal $</string>
    <string name="order_total">Order Total $:</string>
    <string name="salestax">SalesTax $</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="order_information">Order Information</string>
    <string name="current_orders">Current Orders</string>
    <string name="build_pizza">Build Your Own Pizza</string>
    <string name="current_order1">Current Order</string>
    <string name="store_orders1">Store Orders</string>
    <string name="specialty_pizzas1">Specialty Pizzas</string>
    <string name="build_your_own_pizza1">Build Your Own Pizza</string>
    <string name="pizza_size">Pizza Size</string>
    <string name="sauce_options">Sauce Options</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="additional_options">Additional Options</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="remove_topping">Remove Topping</string>
    <string name="place_order1">Place Order</string>
    <string name="add_topping">Add Topping</string>
    <string name="export_orders">Export Orders</string>
    <string name="remove_order">Remove Order</string>
    <string name="n_a">N/A</string>
    <string name="select_order">Select Order:</string>
    <string name="place_order2">Place Order</string>
    <string name="price">Price $:</string>
    <string name="specialty_pizzas2">Specialty Pizzas</string>
    <string name="select_size1">Select Size:</string>
    <string name="select_sauce">Select Sauce:</string>
    <string name="select_pizza">Select Pizza:</string>
    <string name="specialty_pizzas3">Specialty Pizzas</string>
    <string name="add_to_order1">Add to Order</string>
    <string name="beefy">Beefy</string>
    <string name="_12_99">$12.99</string>
    <string name="sauce_tomato">Sauce: Tomato</string>
    <string name="toppings_beef_onion">Toppings: Beef, onion</string>
    <string name="cheese">Cheese</string>
    <string name="_8_99">$8.99</string>
    <string name="toppings_none">Toppings: None</string>
    <string name="deluxe">Deluxe</string>
    <string name="_14_99">$14.99</string>
    <string name="toppings_sausage_pepperoni_green_pepper_onion_mushroom">Toppings: Sausage, pepperoni, green pepper, onion, mushroom</string>
    <string name="detroit">Detroit</string>
    <string name="_13_99">$13.99</string>
    <string name="toppings_sausage_onion_mushroom">Toppings: Sausage, onion, mushroom</string>
    <string name="italiana">Italiana</string>
    <string name="_15_99">$15.99</string>
    <string name="toppings_sausage_shrimp_mushroom_onion_green_pepper">Toppings: Sausage, shrimp, mushroom, onion, green pepper</string>
    <string name="meatzza">Meatzza</string>
    <string name="_16_99">$16.99</string>
    <string name="toppings_sausage_pepperoni_beef_ham">Toppings: Sausage, pepperoni, beef, ham</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="_10_99">$10.99</string>
    <string name="toppings_pepperoni">Toppings: Pepperoni</string>
    <string name="seafood">Seafood</string>
    <string name="sauce_alfredo">Sauce: Alfredo</string>
    <string name="_17_99">$17.99</string>
    <string name="toppings_shrimp_squid_crab_meats">Toppings: Shrimp, squid, crab meats</string>
    <string name="supreme">Supreme</string>
    <string name="toppings_sausage_pepperoni_ham_green_pepper_onion_black_olive_mushroom">Toppings: Sausage, pepperoni, ham, green pepper, onion, black olive, mushroom</string>
    <string name="veggie">Veggie</string>
    <string name="toppings_black_olive_mushroom_onion_green_pepper">Toppings: Black olive, mushroom, onion, green pepper</string>
</resources>
