<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:translationX="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/build_your_own_pizza1"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationX="40dp"
        android:translationY="40dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="300dp"
        android:src="@drawable/custom_pizza"
        android:translationX="200dp"
        android:translationY="50dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/pizza_size"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:translationX="5dp"
        android:translationY="-250dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:text="@string/sauce_options"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <RadioButton
        android:id="@+id/tomatoButton"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:text="@string/tomato_sauce"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <RadioButton
        android:id="@+id/alfredoButton"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:text="@string/alfredo_sauce"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/additional_options"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <CheckBox
        android:id="@+id/extraCheeseCheckbox"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/extra_cheese"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <CheckBox
        android:id="@+id/extraSauceCheckbox"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/extra_sauce"
        android:translationX="5dp"
        android:translationY="-250dp" />

    <ListView
        android:id="@+id/selectedToppings"
        android:layout_width="180dp"
        android:layout_height="188dp"
        android:translationX="200dp"
        android:translationY="-240dp"
        android:choiceMode="singleChoice" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/place_order1"
        android:translationX="230dp"
        android:translationY="-190dp" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:text="@string/remove_topping"
        android:translationX="220dp"
        android:translationY="-280dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="145dp"
        android:layout_height="37dp"
        android:text="@string/add_topping"
        android:translationX="5dp"
        android:translationY="-320dp" />

    <ListView
        android:id="@+id/allToppings"
        android:layout_width="176dp"
        android:layout_height="190dp"
        android:translationX="5dp"
        android:translationY="-550dp"
        android:choiceMode="singleChoice" />



</LinearLayout>
