<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/totalField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/current_orders"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:translationY="5dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:text="@string/order_information"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="120dp" />

    <ListView
        android:id="@+id/orderList"
        android:layout_width="match_parent"
        android:layout_height="381dp"
        android:choiceMode="singleChoice"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp" />

    <Button
        android:id="@+id/removePizzaButton"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_pizza"
        android:translationX="100dp"
        android:translationY="5dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:translationX="100dp"
        android:translationY="180dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salestax"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="250dp"
        android:translationY="-25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="45dp"
        android:translationY="-50dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="35dp" />

    <EditText
        android:id="@+id/orderTotalField"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/n_a"
        android:translationX="160dp" />

    <EditText
        android:id="@+id/subtotalField"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/n_a"
        android:translationX="25dp"
        android:translationY="-120dp" />

    <EditText
        android:id="@+id/salesTaxField"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/n_a"
        android:translationX="225dp"
        android:translationY="-170dp" />
</LinearLayout>
