<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/store_orders"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:translationY="5dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/select_order"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationX="5dp"
        android:translationY="50dp" />

    <Spinner
        android:id="@+id/orderNumberSpinner"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:translationY="50dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="100dp" />

    <EditText
        android:id="@+id/subtotalField"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/n_a"
        android:translationX="200dp"
        android:translationY="60dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:text="@string/order_information"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="10dp"
        android:translationY="130dp" />

    <ListView
        android:id="@+id/pizzaList"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:translationY="130dp" />

    <Button
        android:id="@+id/removePizzaButton"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_order"
        android:translationX="10dp"
        android:translationY="150dp" />


</LinearLayout>
